test/spec_vectors/memory64/fail/module_17.wat
(module (func (drop (memory.grow (i64.const 0)))))